--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,6 @@
         android:theme="@style/Theme.Cookmark_App"
         tools:targetApi="31">
         <activity
-            android:name=".PlanMeal"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".Register"
             android:exported="false">
             <meta-data
@@ -34,14 +27,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Explore"
+            android:name=".MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Landing"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
