--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,12 @@ dependencies {
     implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
     implementation("com.google.firebase:firebase-firestore")
     implementation("com.google.firebase:firebase-analytics")
+    implementation 'com.google.firebase:firebase-database:20.3.0'
+    implementation("com.google.firebase:firebase-storage")
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
 
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
