--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation("com.google.firebase:firebase-storage")
     implementation 'com.google.firebase:firebase-messaging:23.4.0'
+    implementation("com.google.firebase:firebase-auth:22.3.0")
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.google.code.gson:gson:2.8.8'
 
-    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
