--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD4bckX1lRU4BT4pdOkS2WrOiS_8V-0Mhc" />
+            android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".activity.MightLikeRecipeActivity"
