--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".activity.SearchResultActivity"
+            android:exported="false" />
         <service
             android:name=".utils.NotificationService"
             android:exported="false">
