--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics")
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation("com.google.firebase:firebase-storage")
-    implementation 'com.google.firebase:firebase-messaging:23.4.0'
+    implementation 'com.google.firebase:firebase-messaging'
     implementation("com.google.firebase:firebase-auth:22.3.0")
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
